JCRVLT-367 remove java version parsing from scripts as only relevant for Java < 8
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/commons/filevault/trunk@1866718 13f79535-47bb-0310-9956-ffa450edef68